parse/HireParser.py
# Generated from Hire.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class HireParser ( Parser ):

    grammarFileName = "Hire.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'frontend developer'", "'backend developer'", 
                     "'full-stack developer'", "'software engineer'", "'ai engineer'", 
                     "'ml engineer'", "'data scientist'", "'data engineer'", 
                     "'data analyst'", "'qa/qc engineer'", "'tester'", "'security engineer'", 
                     "'devops engineer'", "'cloud engineer'", "'network engineer'", 
                     "'embedded engineer'", "'mobile developer'", "'android developer'", 
                     "'ios developer'", "'solution architect'", "'technical lead'", 
                     "'product manager'", "'scrum master'", "'game developer'", 
                     "'blockchain developer'", "'research engineer'", "'intern'", 
                     "'fresher'", "'junior'", "'medium'", "'senior'", "'director'", 
                     "'manager'", "'bachelor'", "'engineering'", "'master'", 
                     "'phd'", "'computer science'", "'computer engineering'", 
                     "'network engineering'", "'data science'", "'artificial intelligence'", 
                     "'cybersecurity'", "'information systems'", "'git'", 
                     "'docker'", "'kubernetes'", "'jenkins'", "'jira'", 
                     "'postman'", "'webpack'", "'npm'", "'yarn'", "'vscode'", 
                     "'intellij'", "'eclipse'", "'figma'", "'trello'", "'slack'", 
                     "'notion'", "'aws cli'", "'gcp sdk'", "'azure cli'", 
                     "'terraform'", "'github actions'", "'python'", "'java'", 
                     "'c'", "'c++'", "'c#'", "'go'", "'rust'", "'javascript'", 
                     "'typescript'", "'ruby'", "'php'", "'swift'", "'kotlin'", 
                     "'scala'", "'r'", "'matlab'", "'bash'", "'sql'", "'haskell'", 
                     "'perl'", "'pytorch'", "'tensorflow'", "'keras'", "'scikit-learn'", 
                     "'xgboost'", "'lightgbm'", "'opencv'", "'flask'", "'django'", 
                     "'spring'", "'express'", "'fastapi'", "'next.js'", 
                     "'nuxt.js'", "'react'", "'vue'", "'angular'", "'bootstrap'", 
                     "'laravel'", "'.net'", "'asp.net'", "'electron'", "'flutter'", 
                     "'react native'", "'node.js'", "'nestjs'", "'redux'", 
                     "'mui'", "'tailwindcss'", "'springboot'", "'mysql'", 
                     "'postgresql'", "'sqlite'", "'mongodb'", "'redis'", 
                     "'mariadb'", "'oracle'", "'sql server'", "'dynamodb'", 
                     "'cassandra'", "'elasticsearch'", "'aws'", "'azure'", 
                     "'gcp'", "'google cloud'", "'amazon web services'", 
                     "'firebase'", "'heroku'", "'digitalocean'", "'vercel'", 
                     "'netlify'", "'english'", "'japanese'", "'chinese'", 
                     "'korean'", "'german'", "'portugeese'", "'french'", 
                     "'REQUIREMENTS'", "'PREFERENCES'", "'position:'", "'level:'", 
                     "'stack'", "'education'", "'language:'", "'activities:'", 
                     "'experience:'", "'references:'", "'tools:'", "'programming languages:'", 
                     "'framework libraries:'", "'databases cloud services:'", 
                     "'major:'", "'degree:'", "'gpa:'", "'years'", "'show'", 
                     "'top'", "<INVALID>", "'with'", "'{'", "'}'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "REQUIRE_SECTION", "PREFER_SECTION", "POSITION_LABEL", 
                      "LEVEL_LABEL", "STACK_SECTION", "EDU_SECTION", "LANG_LABEL", 
                      "ACTIVITY_LABEL", "EXP_LABEL", "REF_LABEL", "TOOL_LABEL", 
                      "PROG_LANG_LABEL", "FRAMEWORK_LABEL", "DATA_LABEL", 
                      "MAJOR_LABEL", "DEGREE_LABEL", "GPA_LABEL", "YEARS", 
                      "SHOW", "TOP", "CV", "WITH", "OPEN_CURLY", "CLOSE_CURLY", 
                      "COMMA", "COMPARATOR", "INT", "FLOAT", "ID", "WS" ]

    RULE_program = 0
    RULE_showTop = 1
    RULE_showConditional = 2
    RULE_condition = 3
    RULE_jd = 4
    RULE_requirements = 5
    RULE_preferences = 6
    RULE_requirePosition = 7
    RULE_requireLevel = 8
    RULE_requireTechnicalSkills = 9
    RULE_requireTools = 10
    RULE_requireProLang = 11
    RULE_requireFrameworks = 12
    RULE_requireDB = 13
    RULE_requireEducation = 14
    RULE_requireMajor = 15
    RULE_requireDegree = 16
    RULE_requireGPA = 17
    RULE_requireLanguage = 18
    RULE_requireExperience = 19
    RULE_requireActivites = 20
    RULE_position = 21
    RULE_level = 22
    RULE_degree = 23
    RULE_major = 24
    RULE_tool = 25
    RULE_pro_lang = 26
    RULE_framework = 27
    RULE_db = 28
    RULE_lang = 29

    ruleNames =  [ "program", "showTop", "showConditional", "condition", 
                   "jd", "requirements", "preferences", "requirePosition", 
                   "requireLevel", "requireTechnicalSkills", "requireTools", 
                   "requireProLang", "requireFrameworks", "requireDB", "requireEducation", 
                   "requireMajor", "requireDegree", "requireGPA", "requireLanguage", 
                   "requireExperience", "requireActivites", "position", 
                   "level", "degree", "major", "tool", "pro_lang", "framework", 
                   "db", "lang" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    T__102=103
    T__103=104
    T__104=105
    T__105=106
    T__106=107
    T__107=108
    T__108=109
    T__109=110
    T__110=111
    T__111=112
    T__112=113
    T__113=114
    T__114=115
    T__115=116
    T__116=117
    T__117=118
    T__118=119
    T__119=120
    T__120=121
    T__121=122
    T__122=123
    T__123=124
    T__124=125
    T__125=126
    T__126=127
    T__127=128
    T__128=129
    T__129=130
    T__130=131
    T__131=132
    T__132=133
    T__133=134
    T__134=135
    T__135=136
    T__136=137
    T__137=138
    T__138=139
    T__139=140
    T__140=141
    T__141=142
    T__142=143
    REQUIRE_SECTION=144
    PREFER_SECTION=145
    POSITION_LABEL=146
    LEVEL_LABEL=147
    STACK_SECTION=148
    EDU_SECTION=149
    LANG_LABEL=150
    ACTIVITY_LABEL=151
    EXP_LABEL=152
    REF_LABEL=153
    TOOL_LABEL=154
    PROG_LANG_LABEL=155
    FRAMEWORK_LABEL=156
    DATA_LABEL=157
    MAJOR_LABEL=158
    DEGREE_LABEL=159
    GPA_LABEL=160
    YEARS=161
    SHOW=162
    TOP=163
    CV=164
    WITH=165
    OPEN_CURLY=166
    CLOSE_CURLY=167
    COMMA=168
    COMPARATOR=169
    INT=170
    FLOAT=171
    ID=172
    WS=173

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def jd(self):
            return self.getTypedRuleContext(HireParser.JdContext,0)


        def showTop(self):
            return self.getTypedRuleContext(HireParser.ShowTopContext,0)


        def showConditional(self):
            return self.getTypedRuleContext(HireParser.ShowConditionalContext,0)


        def getRuleIndex(self):
            return HireParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = HireParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.jd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.showTop()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.showConditional()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowTopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW(self):
            return self.getToken(HireParser.SHOW, 0)

        def TOP(self):
            return self.getToken(HireParser.TOP, 0)

        def INT(self):
            return self.getToken(HireParser.INT, 0)

        def CV(self):
            return self.getToken(HireParser.CV, 0)

        def getRuleIndex(self):
            return HireParser.RULE_showTop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowTop" ):
                listener.enterShowTop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowTop" ):
                listener.exitShowTop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShowTop" ):
                return visitor.visitShowTop(self)
            else:
                return visitor.visitChildren(self)




    def showTop(self):

        localctx = HireParser.ShowTopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_showTop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(HireParser.SHOW)
            self.state = 66
            self.match(HireParser.TOP)
            self.state = 67
            self.match(HireParser.INT)
            self.state = 68
            self.match(HireParser.CV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW(self):
            return self.getToken(HireParser.SHOW, 0)

        def CV(self):
            return self.getToken(HireParser.CV, 0)

        def WITH(self):
            return self.getToken(HireParser.WITH, 0)

        def condition(self):
            return self.getTypedRuleContext(HireParser.ConditionContext,0)


        def getRuleIndex(self):
            return HireParser.RULE_showConditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowConditional" ):
                listener.enterShowConditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowConditional" ):
                listener.exitShowConditional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShowConditional" ):
                return visitor.visitShowConditional(self)
            else:
                return visitor.visitChildren(self)




    def showConditional(self):

        localctx = HireParser.ShowConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_showConditional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(HireParser.SHOW)
            self.state = 71
            self.match(HireParser.CV)
            self.state = 72
            self.match(HireParser.WITH)
            self.state = 73
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def requireLevel(self):
            return self.getTypedRuleContext(HireParser.RequireLevelContext,0)


        def requireTools(self):
            return self.getTypedRuleContext(HireParser.RequireToolsContext,0)


        def requireProLang(self):
            return self.getTypedRuleContext(HireParser.RequireProLangContext,0)


        def requireFrameworks(self):
            return self.getTypedRuleContext(HireParser.RequireFrameworksContext,0)


        def requireDB(self):
            return self.getTypedRuleContext(HireParser.RequireDBContext,0)


        def requireDegree(self):
            return self.getTypedRuleContext(HireParser.RequireDegreeContext,0)


        def requireGPA(self):
            return self.getTypedRuleContext(HireParser.RequireGPAContext,0)


        def requireExperience(self):
            return self.getTypedRuleContext(HireParser.RequireExperienceContext,0)


        def requireLanguage(self):
            return self.getTypedRuleContext(HireParser.RequireLanguageContext,0)


        def requireActivites(self):
            return self.getTypedRuleContext(HireParser.RequireActivitesContext,0)


        def getRuleIndex(self):
            return HireParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = HireParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_condition)
        try:
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HireParser.LEVEL_LABEL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.requireLevel()
                pass
            elif token in [HireParser.TOOL_LABEL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.requireTools()
                pass
            elif token in [HireParser.PROG_LANG_LABEL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.requireProLang()
                pass
            elif token in [HireParser.FRAMEWORK_LABEL]:
                self.enterOuterAlt(localctx, 4)
                self.state = 78
                self.requireFrameworks()
                pass
            elif token in [HireParser.DATA_LABEL]:
                self.enterOuterAlt(localctx, 5)
                self.state = 79
                self.requireDB()
                pass
            elif token in [HireParser.DEGREE_LABEL]:
                self.enterOuterAlt(localctx, 6)
                self.state = 80
                self.requireDegree()
                pass
            elif token in [HireParser.GPA_LABEL]:
                self.enterOuterAlt(localctx, 7)
                self.state = 81
                self.requireGPA()
                pass
            elif token in [HireParser.EXP_LABEL]:
                self.enterOuterAlt(localctx, 8)
                self.state = 82
                self.requireExperience()
                pass
            elif token in [HireParser.LANG_LABEL]:
                self.enterOuterAlt(localctx, 9)
                self.state = 83
                self.requireLanguage()
                pass
            elif token in [HireParser.ACTIVITY_LABEL]:
                self.enterOuterAlt(localctx, 10)
                self.state = 84
                self.requireActivites()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def requirements(self):
            return self.getTypedRuleContext(HireParser.RequirementsContext,0)


        def preferences(self):
            return self.getTypedRuleContext(HireParser.PreferencesContext,0)


        def getRuleIndex(self):
            return HireParser.RULE_jd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJd" ):
                listener.enterJd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJd" ):
                listener.exitJd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJd" ):
                return visitor.visitJd(self)
            else:
                return visitor.visitChildren(self)




    def jd(self):

        localctx = HireParser.JdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_jd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.requirements()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireParser.PREFER_SECTION:
                self.state = 88
                self.preferences()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequirementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REQUIRE_SECTION(self):
            return self.getToken(HireParser.REQUIRE_SECTION, 0)

        def OPEN_CURLY(self):
            return self.getToken(HireParser.OPEN_CURLY, 0)

        def requirePosition(self):
            return self.getTypedRuleContext(HireParser.RequirePositionContext,0)


        def requireLevel(self):
            return self.getTypedRuleContext(HireParser.RequireLevelContext,0)


        def requireTechnicalSkills(self):
            return self.getTypedRuleContext(HireParser.RequireTechnicalSkillsContext,0)


        def requireEducation(self):
            return self.getTypedRuleContext(HireParser.RequireEducationContext,0)


        def requireExperience(self):
            return self.getTypedRuleContext(HireParser.RequireExperienceContext,0)


        def CLOSE_CURLY(self):
            return self.getToken(HireParser.CLOSE_CURLY, 0)

        def requireLanguage(self):
            return self.getTypedRuleContext(HireParser.RequireLanguageContext,0)


        def getRuleIndex(self):
            return HireParser.RULE_requirements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequirements" ):
                listener.enterRequirements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequirements" ):
                listener.exitRequirements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequirements" ):
                return visitor.visitRequirements(self)
            else:
                return visitor.visitChildren(self)




    def requirements(self):

        localctx = HireParser.RequirementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_requirements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(HireParser.REQUIRE_SECTION)
            self.state = 92
            self.match(HireParser.OPEN_CURLY)
            self.state = 93
            self.requirePosition()
            self.state = 94
            self.requireLevel()
            self.state = 95
            self.requireTechnicalSkills()
            self.state = 96
            self.requireEducation()
            self.state = 97
            self.requireExperience()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireParser.LANG_LABEL:
                self.state = 98
                self.requireLanguage()


            self.state = 101
            self.match(HireParser.CLOSE_CURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PreferencesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PREFER_SECTION(self):
            return self.getToken(HireParser.PREFER_SECTION, 0)

        def OPEN_CURLY(self):
            return self.getToken(HireParser.OPEN_CURLY, 0)

        def CLOSE_CURLY(self):
            return self.getToken(HireParser.CLOSE_CURLY, 0)

        def requireTools(self):
            return self.getTypedRuleContext(HireParser.RequireToolsContext,0)


        def requireProLang(self):
            return self.getTypedRuleContext(HireParser.RequireProLangContext,0)


        def requireFrameworks(self):
            return self.getTypedRuleContext(HireParser.RequireFrameworksContext,0)


        def requireDB(self):
            return self.getTypedRuleContext(HireParser.RequireDBContext,0)


        def requireDegree(self):
            return self.getTypedRuleContext(HireParser.RequireDegreeContext,0)


        def requireGPA(self):
            return self.getTypedRuleContext(HireParser.RequireGPAContext,0)


        def requireExperience(self):
            return self.getTypedRuleContext(HireParser.RequireExperienceContext,0)


        def requireLanguage(self):
            return self.getTypedRuleContext(HireParser.RequireLanguageContext,0)


        def requireActivites(self):
            return self.getTypedRuleContext(HireParser.RequireActivitesContext,0)


        def getRuleIndex(self):
            return HireParser.RULE_preferences

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPreferences" ):
                listener.enterPreferences(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPreferences" ):
                listener.exitPreferences(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPreferences" ):
                return visitor.visitPreferences(self)
            else:
                return visitor.visitChildren(self)




    def preferences(self):

        localctx = HireParser.PreferencesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_preferences)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(HireParser.PREFER_SECTION)
            self.state = 104
            self.match(HireParser.OPEN_CURLY)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireParser.TOOL_LABEL:
                self.state = 105
                self.requireTools()


            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireParser.PROG_LANG_LABEL:
                self.state = 108
                self.requireProLang()


            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireParser.FRAMEWORK_LABEL:
                self.state = 111
                self.requireFrameworks()


            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireParser.DATA_LABEL:
                self.state = 114
                self.requireDB()


            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireParser.DEGREE_LABEL:
                self.state = 117
                self.requireDegree()


            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireParser.GPA_LABEL:
                self.state = 120
                self.requireGPA()


            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireParser.EXP_LABEL:
                self.state = 123
                self.requireExperience()

